<resources>
    <string name="app_name">taskmaster</string>
    <string name="name">My Tasks</string>
    <string name="addTaskButton">ADD TASK</string>
    <string name="allTaskButton">ALL TASKS</string>
    <string name="title_activity_add_task">AddTask</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="secondPageTextView">Add Task</string>
    <string name="secondPageTaskTitle">Task title</string>
    <string name="secondPageTaskDescription">Task Description</string>
    <string name="secondPageButton">ADD TASK</string>
    <string name="secondPageTotalTask">Total tasks</string>
    <string name="thirdPageTextView">All Tasks</string>
    <string name="body">body</string>
    <string name="state">state</string>
    <string name="title">Title</string>
    <string name="tasks">Tasks</string>
    <string name="task1">Task!</string>
    <string name="task2">Task2</string>
    <string name="task3">Task3</string>
    <string name="settings">Settings</string>
    <string name="add_task">ADD TASK</string>
    <string name="all_tasks">ALL TASKS</string>
    <string name="team">Team</string>
    <string name="upload" />
    <string name="taskimage">taskImage</string>
    <string name="taskImage" />
    <string name="task">task</string>
    <string name="imageview">imageView</string>
    <string name="logout">Logout</string>
    <string name="all_Tasks">All Tasks</string>
    <string name="Task1">Task</string>
    <string name="username">username</string>
    <string name="save">Save</string>
    <string name="task_master_app1">Task Master App</string>
    <string name="Username">Username</string>
    <string name="password1">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_a_new_acount">Create a new Acount!</string>
    <string name="task_master_app">Task Master App</string>
    <string name="create_new_account">Create New Account</string>
    <string name="userName">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="task_detail">Task Detail</string>
<!--    <string name="task_detail">Task Detail</string>-->
    <string name="taskimageview1">taskImageview</string>
    <string name="todo">TODO</string>
    <string name="filelink">fileLink</string>
    <string name="task_state">Task State</string>
    <string name="task_team">Task Team</string>
    <string name="verification_code">verification code</string>
    <string name="verify">Verify</string>
<!--    <string name="taskimageview">taskImageview</string>-->
    <string name="taskimg">taskimg</string>
    <string name="status">State</string>
    <string name="Upload">upload</string>
    <string name="taskimageview">taskImageview</string>
    <string name="img">img</string>


    <string-array name="stateArray">
        <item>New</item>
        <item>Assigned</item>
        <item>In Progress</item>
        <item>Completed</item>
    </string-array>


    <string-array name="TeamArray">
        <item>Team 1</item>
        <item>Team 2</item>
        <item>Team 3</item>
    </string-array>

</resources>